fix(ffe-lists): replace hardcoded spacing with variables
BREAKING CHANGE: This commit is likely to cause small visual regressions caused by slightly altered margin and padding values.

--- a/packages/ffe-lists/less/regular-lists.less
+++ b/packages/ffe-lists/less/regular-lists.less
@@ -54,12 +54,12 @@
 .ffe-bullet-list {
     padding: 0;
     text-align: left;
-    margin: 0 0 20px;
+    margin: 0 0 @ffe-spacing-sm;
 
     > .ffe-numbered-list__item,
     > .ffe-bullet-list__item {
-        margin-top: 10px;
-        margin-left: 15px;
+        margin-top: @ffe-spacing-xs;
+        margin-left: @ffe-spacing-sm;
     }
 }
 
@@ -83,7 +83,7 @@
 @media (min-width: @breakpoint-sm) {
     .ffe-numbered-list,
     .ffe-bullet-list {
-        margin-left: 20px;
+        margin-left: @ffe-spacing-sm;
 
         &--condensed {
             margin-left: 0;
@@ -95,7 +95,7 @@
 @media (min-width: @breakpoint-md) {
     .ffe-numbered-list > .ffe-numbered-list__item,
     .ffe-bullet-list > .ffe-bullet-list__item {
-        margin-left: 30px;
+        margin-left: @ffe-spacing-lg;
 
         &--condensed {
             margin-left: 0;
@@ -107,13 +107,13 @@
 .ffe-stylized-numbered-list {
     padding: 0;
     text-align: left;
-    margin: 0 0 20px;
+    margin: 0 0 @ffe-spacing-sm;
     list-style: none;
 
     > .ffe-check-list__item,
     > .ffe-stylized-numbered-list__item {
-        margin-top: 1.75em;
-        margin-left: 2.5em;
+        margin-top: @ffe-spacing-sm;
+        margin-left: @ffe-spacing-lg;
         position: relative;
         line-height: 1.5em;
     }
@@ -135,7 +135,7 @@
             text-indent: -9999px;
             width: 1em;
             height: 1em;
-            left: -2.5em;
+            left: -2em;
             top: 0.15em;
             background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 200' width='200' height='200'%3E%3Cpath fill='@{ffe-green-shamrock-fill}' d='M176.56-8.325E-7c-4.403,0-8.307,2.46595-10.288,5.89248l-90.5448,156.336-42.6109-59.77c-2.46172-2.94562-5.88534-4.89058-9.78806-4.89058h-7.3426c-4.40307,0-8.30704,2.46094-10.2884,6.36839-1.94136,3.94753-1.46102,8.8406,1.0007,12.2671l54.8007,75.963c3.4224,4.89,9.3077,7.834,15.1918,7.834,6.84477,0,12.7076-3.42654,16.13-9.31777l100.827-173.487c2.46172-3.4666,2.46547-7.83618,0.0438-11.3028-1.942-3.94755-5.886-5.8925-10.289-5.8925h-6.84226z'/%3E%3C/svg%3E");
             background-position: center;
@@ -162,7 +162,8 @@
         > .ffe-check-list__item {
             color: @ffe-blue-royal;
             background-color: @ffe-sand;
-            padding: 0.85em 1em 0.85em 3em;
+            padding: @ffe-spacing-sm @ffe-spacing-sm @ffe-spacing-sm
+                @ffe-spacing-2xl;
             border-radius: 4px;
             margin-left: 0;
             margin-top: 1em;
@@ -225,7 +226,7 @@
             content: counter(list-elements);
             display: block;
             position: absolute;
-            left: -2.3em;
+            left: -1.8em;
             top: 0.05em;
             font-size: 1.1em;
             color: @ffe-blue-royal;
